--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.8",
+    "axios-logger": "^2.8.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
