--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
     "axios-logger": "^2.8.0",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +21,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
